--- a/src/App.css
+++ b/src/App.css
@@ -134,3 +134,12 @@ main {
   flex-shrink: 0;
   margin-right: 3px;
 }
+
+.user-name-field {
+  width: 100%;
+}
+
+.join-chat-btn {
+  width: "100%";
+  margin-top: "1em";
+}
