Add space around system messages

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,11 @@ main {
   display: flex;
 }
 
+.message-row[data-origin="system"] + .message-row:not([data-origin="system"]),
+.message-row:not([data-origin="system"]) + .message-row[data-origin="system"] {
+  margin-top: 0.3rem;
+}
+
 .message-row .before,
 .message-row .after {
   min-width: 1%;
